1.3.2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates and fixes.
- Fixed issue #11405: Ambiguous column names when using
  ezcPersistentManyToManyRelation. Column names are now correctly prefixed
  with their corresponding table names.


1.3.1 - Monday 13 August 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates and fixes.


1.3 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates and fixes.


1.3rc1 - Monday 25 June 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates and fixes.


1.3beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10152: Persistent Object and manual generator: string primary
  keys.
- Fixed issue #10552: ManyToMany relations with multiple columns. Mapping works
  correctly now.
- Fixed issue #10331: PersistentObject: Exceptions should become more verbose.
  ezcPersistentQueryException now contains the SQL query in its message, if
  appropriate.
- Fixed issue #10725: PersistentObject saveOrUpdate() using manualgenerator
  will trigger one extra query to check if an object is persistent (save() and
  update() do this as well just moments later...).
- Fixed issue #10726: PersistentObject definition should contain type info on
  the identifier.
- Fixed issue #10770: PersistentObject throws PDOException in some cases.
  Throws correct ezcPersistentQueryException now.


1.3beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed testcase for manual generator giving failure for postgresql on correct
  behaviour (INSERT violating NULL contraint does give an error...).
- Fixed issue #9999: idProperty missing in definition file causes unclear
  error messages.